# backend/src/types/jobs.types.ts
@@ -1,67 +1,8 @@
-export interface VacancyShort {
-  alternate_url: string;
-  employer?: {
-    name: string;
-  };
-  id: string;
-  name: string;
-}
-
-export interface VacancyFull {
-  alternate_url: string;
-  area?: {
-    id: string;
-    name: string;
-  };
-  description: string;
-  employer?: {
-    name: string;
-  };
-  employment_form?: {
-    id: string;
-    name: string;
-  };
-
-  experience?: {
-    id: string;
-    name: string;
-  };
-
-  id: string;
-
-  key_skills?: {
-    name: string;
-  }[];
-
-  name: string;
-
-  published_at: string;
-
-  salary?: {
-    from?: number;
-    to?: number;
-    currency?: string;
-  };
-
-  work_format?: {
-    id: string;
-    name: string;
-  }[];
-
-  work_schedule_by_days?: {
-    id: string;
-    name: string;
-  }[];
-
-  working_hours?: {
-    id: string;
-    name: string;
-  }[];
-}
+import type { HHVacancyShort } from '../integrations/hh';
 
 export interface SearchSession {
   found: number;
-  pages: VacancyShort[][];
+  pages: HHVacancyShort[][];
   pagesTotal: number;
   perPage: number;
 }
